--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
+    "csv-writer": "^1.6.0",
     "dns": "^0.2.2",
     "email-validator": "^2.0.4",
     "express": "^5.1.0",
+    "multer": "^1.4.5-lts.2",
     "net": "^1.0.2",
     "nodemon": "^3.1.10"
   }
